--- a/Sign-In-DOC.html
+++ b/Sign-In-DOC.html
@@ -10,6 +10,8 @@
         <link rel="stylesheet" type="text/css" href="./styles/styles.css">
         
         <script>
+
+            //show password
             function passwordVisible() {
                 var x = document.getElementById("password");
                 if (x.type === "password") {
