--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -107,12 +107,12 @@
 
             // When the user clicks on the password field, show the message box
             // function showPasswordMessage() {
-            //     document.getElementById("message").style.display = "block";
+            //     document.querySelector(".message-password-requirement").style.display = "block";
             // }
 
             // When the user clicks outside of the password field, hide the message box
             // function hidePasswordMessage() {
-            //     document.getElementById("message").style.display = "none";
+            //     document.querySelector(".message-password-requirement").style.display = "none";
             // }
 
             // function buttonDisableEnable(input) {
