--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -65,7 +65,7 @@
                 var number = document.getElementById("number");
                 var length = document.getElementById("length");
 
-                // Validate lowercase letters
+                // Display Validate lowercase letters
                 var lowerCaseLetters = /[a-z]/g;
                 if(myInput.value.match(lowerCaseLetters)) {  
                     letter.classList.remove("invalid");
@@ -75,7 +75,7 @@
                     letter.classList.add("invalid");
                 }
                 
-                // Validate capital letters
+                // Display Validate capital letters
                 var upperCaseLetters = /[A-Z]/g;
                 if(myInput.value.match(upperCaseLetters)) {  
                     capital.classList.remove("invalid");
@@ -85,7 +85,7 @@
                     capital.classList.add("invalid");
                 }
 
-                // Validate numbers
+                // Display Validate numbers
                 var numbers = /[0-9]/g;
                 if(myInput.value.match(numbers)) {  
                     number.classList.remove("invalid");
@@ -95,7 +95,7 @@
                     number.classList.add("invalid");
                 }
 
-                // Validate length
+                // Dispaly Validate length
                 if(myInput.value.length >= 8) {
                     length.classList.remove("invalid");
                     length.classList.add("valid");
