--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -67,33 +67,36 @@
 
                 // Display Validate lowercase letters
                 var lowerCaseLetters = /[a-z]/g;
-                if(myInput.value.match(lowerCaseLetters)) {  
-                    letter.classList.remove("invalid");
-                    letter.classList.add("valid");
-                } else {
-                    letter.classList.remove("valid");
-                    letter.classList.add("invalid");
-                }
+                utilizeValidate(myInput,lowerCaseLetters,letter)
+                // if(myInput.value.match(lowerCaseLetters)) {  
+                //     letter.classList.remove("invalid");
+                //     letter.classList.add("valid");
+                // } else {
+                //     letter.classList.remove("valid");
+                //     letter.classList.add("invalid");
+                // }
                 
                 // Display Validate capital letters
                 var upperCaseLetters = /[A-Z]/g;
-                if(myInput.value.match(upperCaseLetters)) {  
-                    capital.classList.remove("invalid");
-                    capital.classList.add("valid");
-                } else {
-                    capital.classList.remove("valid");
-                    capital.classList.add("invalid");
-                }
+                utilizeValidate(myInput,upperCaseLetters,capital)
+                // if(myInput.value.match(upperCaseLetters)) {  
+                //     capital.classList.remove("invalid");
+                //     capital.classList.add("valid");
+                // } else {
+                //     capital.classList.remove("valid");
+                //     capital.classList.add("invalid");
+                // }
 
                 // Display Validate numbers
                 var numbers = /[0-9]/g;
-                if(myInput.value.match(numbers)) {  
-                    number.classList.remove("invalid");
-                    number.classList.add("valid");
-                } else {
-                    number.classList.remove("valid");
-                    number.classList.add("invalid");
-                }
+                utilizeValidate(myInput,numbers,number)
+                // if(myInput.value.match(numbers)) {  
+                //     number.classList.remove("invalid");
+                //     number.classList.add("valid");
+                // } else {
+                //     number.classList.remove("valid");
+                //     number.classList.add("invalid");
+                // }
 
                 // Dispaly Validate length
                 if(myInput.value.length >= 8) {
@@ -102,6 +105,16 @@
                 } else {
                     length.classList.remove("valid");
                     length.classList.add("invalid");
+                }
+            }
+
+            function utilizeValidate(input,checkvalidate,idItem){
+                if(input.value.match(checkvalidate)) {  
+                    idItem.classList.remove("invalid");
+                    idItem.classList.add("valid");
+                } else {
+                    idItem.classList.remove("valid");
+                    idItem.classList.add("invalid");
                 }
             }
 
