--- a/Sign-In-DOC.html
+++ b/Sign-In-DOC.html
@@ -15,6 +15,7 @@
             function passwordVisible() {
                 var x = document.getElementById("password");
 
+                //show hide icon eye password
                 if(document.getElementById("password-icon").classList == "password-visible-icon"){
                     document.getElementById("password-icon").classList.add("password-hide-icon")
                     document.getElementById("password-icon").classList.remove("password-visible-icon")
@@ -23,6 +24,7 @@
                     document.getElementById("password-icon").classList.add("password-visible-icon")
                 }
 
+                //show hide password
                 if (x.type === "password") {
                     x.type = "text";
                 } else {
@@ -34,13 +36,7 @@
             function validateForm(){
 
                 var e=document.getElementById("email").value;
-                var n=document.getElementById("password").value;
-
-                // validate email
-                // var email_filter = /^([a-zA-Z0-9_\.\-])+\@(([a-zA-Z0-9\-])+\.)+([a-zA-Z0-9]{2,4})|([0-9]{10,11})+$/;
-                // if(e == "" || !email_filter.test(e)){
-                //     return alert("Please provide a valid email address");
-                // }
+                var n=document.getElementById("password").value;                
 
                 if( /[A-Za-z]/.test(e)){
                     //validate email
@@ -91,10 +87,8 @@
             //     //     if(p == "" || !phone_filter.test(p)){
             //     //     return alert("Please provide a valid phone number");
             //     // }
-            // } 
-            
+            // }
 
-            
         </script>
     </head>
 
@@ -105,7 +99,9 @@
 
                 <!-- Login Background Image -->
                 <div class="login-image-column">
-                    <div class="login-image"><img class="img-bg-login" src="./images/doctorOnCall-icon.png"></div>
+                    <div class="login-image">
+                        <a href="#"><img class="img-bg-login" src="./images/doctorOnCall-icon.png"></a>
+                    </div>
                 </div>
 
                 <!-- Login Form Start -->
