Update meta HTML

--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -3,9 +3,13 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="active-menu" content="">
         <title>Sign Up Page</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="keywords" content="">
+        <meta name="description" content="Doctor On Call is Malaysia's fastest way to see a doctor and get medicine on your computer, tablet or phone- from the comfort of home.">
+        <meta name="author" content="">
         <link rel="stylesheet" type="text/css" href="./styles/bootstrap-grid.min.css">  
         <link rel="stylesheet" type="text/css" href="./styles/styles.css">
         
