--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -95,6 +95,7 @@
                 }
             }
 
+            //utility function for display validation
             function utilizeValidate(input,checkvalidate,idItem){
                 if(input.value.match(checkvalidate)) {  
                     idItem.classList.remove("invalid");
