Update minor changes comment

--- a/Sign-Up-DOC.html
+++ b/Sign-Up-DOC.html
@@ -72,10 +72,10 @@
                 //     document.getElementById("password-error").innerHTML = 'Please provide a valid password'
                 // }
 
-                if(error>0){
-                    return false;
-                }
-                return true;                
+                // if(error>0){
+                //     return false;
+                // }
+                // return true;                
 
             }            
 
