--- a/Sign-In-DOC.html
+++ b/Sign-In-DOC.html
@@ -72,10 +72,10 @@
                     document.getElementById("password-error").innerHTML = 'Please provide a valid password'
                 }
 
-                if(error>0){
-                    return false;
-                }
-                return true;
+                // if(error>0){
+                //     return false;
+                // }
+                // return true;
             }
 
             //function disable and enable button sign up or sign in
